RESOLVED FIXED241431
REGRESSION (250836@main): [iOS] Found text is not scrolled into view when highlighting the next/previous result
https://bugs.webkit.org/show_bug.cgi?id=241431
Summary REGRESSION (250836@main): [iOS] Found text is not scrolled into view when hig...
Aditya Keerthi
Reported 2022-06-08 12:25:19 PDT
...
Attachments
Aditya Keerthi
Comment 1 2022-06-08 12:25:31 PDT
Aditya Keerthi
Comment 2 2022-06-08 12:33:43 PDT
EWS
Comment 3 2022-06-08 13:59:21 PDT
Committed r295392 (251398@main): <https://commits.webkit.org/251398@main> Reviewed commits have been landed. Closing PR #1386 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.