REGRESSION (250836@main): [iOS] Found text is not scrolled into view when highlighting the next/previous result https://bugs.webkit.org/show_bug.cgi?id=241431 rdar://94584301

Reviewed by Wenson Hsieh.

250836@main switched to a model in which we update the selection asynchronously
in the case of having a non-user triggered change.

Scrolling to highlighted found text is done using TemporarySelectionChange,
which relies on selection updates being synchronous, as the previous selection
is restored once the object is destroyed.

Similar to the fix for App Highlights, included in 250836@main, treat the
selection change for scrolling to a found text range as a UserTriggered change,
so that it is performed synchronously, and the scroll actualy occurs.

This is covered by existing API tests, that are currently run on internal bots
only.

* Source/WebKit/WebProcess/WebPage/WebFoundTextRangeController.cpp:
(WebKit::WebFoundTextRangeController::scrollTextRangeToVisible):

Canonical link: https://commits.webkit.org/251398@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@295392 268f45cc-cd09-0410-ab3c-d52691b4dbfc